@@ -14,6 +14,7 @@ Designer 2.14.0 (2012-08-XX Markab)
    - Enfore unicity of element id in schemas (MODELER-412)
    - Add 'data' attribute to protocol xml for 1-wire (MODELER-435)
    - In edit/new macro window, command tree must include device name (MODELER-361)
+   - Add support for Marantz Receivers protocol (MODELER-442)
 
  Fixes:
 
